implement react-router for boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>HTML Boilerplate</title>
+    <title>React Boilerplate</title>
   </head>
   <body>
-    <h1>Find me in src/index.html</h1>
+    <div id="app"></div>
   </body>
 </html>
